chore: Move 이메일 템플릿 파일 이동

--- a/src/constants/email/completed.html
+++ b/src/constants/email/completed.html
@@ -22,7 +22,8 @@
       <p>▷ 공연 일시: ${musicalDate}</p>
       <p>▷ 매수: ${tickets}매</p>
       <p>
-        <a href="https://www.mahemusical.com/bookCheck"
+        <a
+          href="https://www.mahemusical.com/bookCheck?name=${username}&email=${email}"
           >* 나의 예매내역 확인하기</a
         >
       </p>
