--- a/src/constants/email/request.html
+++ b/src/constants/email/request.html
@@ -31,7 +31,8 @@
 
       <p>▷ 입금액: ${totalPrice}원</p>
       <p>
-        <a href="https://www.mahemusical.com/bookCheck"
+        <a
+          href="https://www.mahemusical.com/bookCheck?name=${username}&email=${email}"
           >* 나의 예매내역 확인하기</a
         >
       </p>
